--- a/index.html
+++ b/index.html
@@ -1,111 +1,187 @@
 <html>
 <head>
 <!--    <script src='//eu.fw-cdn.com/12381002/469037.js' chat='true'></script>-->
+    <script>
+        window.prechatTemplate = {
+            "SubmitLabel": "Start Chat",
+            "fields": {
+                "0": {
+                    "error": "Please Enter a valid Title",
+                    "fieldId": "title",
+                    "label": "Title",
+                    "required": "yes",
+                    "type": "text"
+                },
+                "1": {
+                    "error": "Please Enter a valid name",
+                    "fieldId": "name",
+                    "label": "Name",
+                    "required": "yes",
+                    "type": "text"
+                },
+                "2": {
+                    "error": "Please Enter a valid Email",
+                    "fieldId": "email",
+                    "label": "Email",
+                    "required": "yes",
+                    "type": "email"
+                },
+                "3": {
+                    "error": "Please Enter a valid Phone Number",
+                    "fieldId": "phone",
+                    "label": "Phone",
+                    "required": "no",
+                    "type": "phone"
+                },
+                "4": {
+                    "error": "Please select an option",
+                    "fieldId": "plan",
+                    "label": "Plan",
+                    "options": [
+                        "Sprout",
+                        "Blossom",
+                        "Garden",
+                        "Estate",
+                        "Forest"
+                    ],
+                    "required": "no",
+                    "type": "dropdown"
+                }
+            },
+            "heading": "Chat with Us",
+            "mainbgColor": "#0aa4db",
+            "maintxColor": "#fff",
+            "textBanner": "We can't wait to talk to you. But first, please take a couple of moments to tell us a bit about yourself."
+        };
+        window.fcSettings = {
+            onInit: function() {
+                window.fcPreChatform.fcWidgetInit(window.prechatTemplate);
+            }
+        };
+        window.fcWidgetMessengerConfig = {
+            config: {
+                content: {
+                    actions: {
+                        tab_chat: "Chat"
+                    },
+                    headers: {
+                        chat: "Chat With Us"
+                    }
+                },
+                cssNames: {
+                    expanded: "custom_fc_expanded",
+                    widget: "custom_fc_frame"
+                }
+            }
+        };
+    </script>
+    <script src="https://snippets.freshchat.com/js/fc-pre-chat-form-v2.js"></script>
+    <script src='//fw-cdn.com/1628939/2527989.js' chat='true'></script>
 </head>
 <body>
 
 Im only testing something
 
-<script src="https://snippets.freshchat.com/js/fc-pre-chat-form-v2.min.js"></script>
-<script>
-    const WEB_CHAT_TOKEN = '74123139-1fad-415f-b351-7e3f1979de16';
-    var preChatTemplate = {
-// Form header color and Submit button color.
-        mainbgColor: '#0aa4db',
-//Form Header Text and Submit button text color.
-        maintxColor: '#fff',
-//Chat Form Title
-        heading: 'GadgetGod',
-//Chat form Welcome Message
-        textBanner: 'We can\'t wait to talk to you. But first, please take a couple of moments to tell us a bit about yourself.',
-        //Submit Button Label.
-        SubmitLabel: 'Start Chat',
-        //Fields List - Maximum is 5
-        // All the values are mandatory and the script will not work if not available.
-        fields:
-            {
-                field1: {
-                    //Type can be either text or title
-                    type: 'title',
-                    //Label for Field Title, can be in any language
-                    label: 'Title',
-                    //Field ID for Title
-                    fieldId: 'title',
-                    //Required "yes" or "no"
-                    required: 'yes',
-                    //Error text to be displayed
-                    error: 'Please Enter a valid Title'
-                },
-                field2: {
-                    //Type for Name - Do not Change
-                    type: 'name',
-                    //Label for Field Name, can be in any language
-                    label: 'Name',
-                    //Default - Field ID for Name - Do Not Change
-                    fieldId: 'name',
-                    //Required "yes" or "no"
-                    required: 'yes',
-                    //Error text to be displayed
-                    error: 'Please Enter a valid name'
-                },
-                field3: {
-                    //Type for Email - Do Not Change
-                    type: 'email',
-                    //Label for Field Email, can be in any language
-                    label: 'Email',
-                    //Default - Field ID for Email - Do Not Change
-                    fieldId: 'email',
-                    //Required "yes" or "no"
-                    required: 'yes',
-                    //Error text to be displayed
-                    error: 'Please Enter a valid Email'
-                },
-                field4: {
-                    //Type for Phone - Do Not Change
-                    type: 'phone',
-                    //Label for Field Phone, can be in any language
-                    label: 'Phone',
-                    //Default - Field ID for Phone - Do Not Change
-                    fieldId: 'phone',
-                    //Required "yes" or "no"
-                    required: 'yes',
-                    //Error text to be displayed
-                    error: 'Please Enter a valid Phone Number'
-                },
-                field5: {
-                    //Type for Dropdown
-                    type: 'dropdown',
-                    // Label for Field Dropdown, can be in any language
-                    label: 'Plan',        //Field ID for Plan Dropdown
-                    fieldId: 'plan',
-                    //Required "yes" or "no"
-                    required: 'yes',
-                    //Error text to be displayed
-                    error: 'Please select an option',
-                    // Options for the Dropdown field
-                    options: ['Sprout', 'Blossom', 'Garden', 'Estate', 'Forest']
-                }
-            }
-    };
-    window.fcSettings =
-        {
-            token: WEB_CHAT_TOKEN, host: 'https://wchat.freshchat.com',
-            config: {
-                cssNames: {
-                    //The below element is mandatory. Please add any custom class or leave the default.
-                    widget: 'custom_fc_frame',
-                    //The below element is mandatory. Please add any custom class or leave the default.
-                    expanded: 'custom_fc_expanded'
-                }
-            },
+<!--<script src="https://snippets.freshchat.com/js/fc-pre-chat-form-v2.min.js"></script>-->
+<!--<script>-->
+<!--    const WEB_CHAT_TOKEN = '74123139-1fad-415f-b351-7e3f1979de16';-->
+<!--    var preChatTemplate = {-->
+<!--// Form header color and Submit button color.-->
+<!--        mainbgColor: '#0aa4db',-->
+<!--//Form Header Text and Submit button text color.-->
+<!--        maintxColor: '#fff',-->
+<!--//Chat Form Title-->
+<!--        heading: 'GadgetGod',-->
+<!--//Chat form Welcome Message-->
+<!--        textBanner: 'We can\'t wait to talk to you. But first, please take a couple of moments to tell us a bit about yourself.',-->
+<!--        //Submit Button Label.-->
+<!--        SubmitLabel: 'Start Chat',-->
+<!--        //Fields List - Maximum is 5-->
+<!--        // All the values are mandatory and the script will not work if not available.-->
+<!--        fields:-->
+<!--            {-->
+<!--                field1: {-->
+<!--                    //Type can be either text or title-->
+<!--                    type: 'title',-->
+<!--                    //Label for Field Title, can be in any language-->
+<!--                    label: 'Title',-->
+<!--                    //Field ID for Title-->
+<!--                    fieldId: 'title',-->
+<!--                    //Required "yes" or "no"-->
+<!--                    required: 'yes',-->
+<!--                    //Error text to be displayed-->
+<!--                    error: 'Please Enter a valid Title'-->
+<!--                },-->
+<!--                field2: {-->
+<!--                    //Type for Name - Do not Change-->
+<!--                    type: 'name',-->
+<!--                    //Label for Field Name, can be in any language-->
+<!--                    label: 'Name',-->
+<!--                    //Default - Field ID for Name - Do Not Change-->
+<!--                    fieldId: 'name',-->
+<!--                    //Required "yes" or "no"-->
+<!--                    required: 'yes',-->
+<!--                    //Error text to be displayed-->
+<!--                    error: 'Please Enter a valid name'-->
+<!--                },-->
+<!--                field3: {-->
+<!--                    //Type for Email - Do Not Change-->
+<!--                    type: 'email',-->
+<!--                    //Label for Field Email, can be in any language-->
+<!--                    label: 'Email',-->
+<!--                    //Default - Field ID for Email - Do Not Change-->
+<!--                    fieldId: 'email',-->
+<!--                    //Required "yes" or "no"-->
+<!--                    required: 'yes',-->
+<!--                    //Error text to be displayed-->
+<!--                    error: 'Please Enter a valid Email'-->
+<!--                },-->
+<!--                field4: {-->
+<!--                    //Type for Phone - Do Not Change-->
+<!--                    type: 'phone',-->
+<!--                    //Label for Field Phone, can be in any language-->
+<!--                    label: 'Phone',-->
+<!--                    //Default - Field ID for Phone - Do Not Change-->
+<!--                    fieldId: 'phone',-->
+<!--                    //Required "yes" or "no"-->
+<!--                    required: 'yes',-->
+<!--                    //Error text to be displayed-->
+<!--                    error: 'Please Enter a valid Phone Number'-->
+<!--                },-->
+<!--                field5: {-->
+<!--                    //Type for Dropdown-->
+<!--                    type: 'dropdown',-->
+<!--                    // Label for Field Dropdown, can be in any language-->
+<!--                    label: 'Plan',        //Field ID for Plan Dropdown-->
+<!--                    fieldId: 'plan',-->
+<!--                    //Required "yes" or "no"-->
+<!--                    required: 'yes',-->
+<!--                    //Error text to be displayed-->
+<!--                    error: 'Please select an option',-->
+<!--                    // Options for the Dropdown field-->
+<!--                    options: ['Sprout', 'Blossom', 'Garden', 'Estate', 'Forest']-->
+<!--                }-->
+<!--            }-->
+<!--    };-->
+<!--    window.fcSettings =-->
+<!--        {-->
+<!--            token: WEB_CHAT_TOKEN, host: 'https://wchat.freshchat.com',-->
+<!--            config: {-->
+<!--                cssNames: {-->
+<!--                    //The below element is mandatory. Please add any custom class or leave the default.-->
+<!--                    widget: 'custom_fc_frame',-->
+<!--                    //The below element is mandatory. Please add any custom class or leave the default.-->
+<!--                    expanded: 'custom_fc_expanded'-->
+<!--                }-->
+<!--            },-->
 
-            onInit: function () {
-                console.log('widget init');
-                fcPreChatform.fcWidgetInit(preChatTemplate);
-            }
-        };
-</script>
-<script src="https://wchat.freshchat.com/js/widget.js" async></script>
+<!--            onInit: function () {-->
+<!--                console.log('widget init');-->
+<!--                fcPreChatform.fcWidgetInit(preChatTemplate);-->
+<!--            }-->
+<!--        };-->
+<!--</script>-->
+<!--<script src="https://wchat.freshchat.com/js/widget.js" async></script>-->
 
 </body>
 </html>
