--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
         };
     </script>
     <script src="https://snippets.freshchat.com/js/fc-pre-chat-form-v2.js"></script>
-    <script src='//fw-cdn.com/1628939/2527989.js' chat='true'></script>
+    <!--    <script src='//fw-cdn.com/1628939/2527989.js' chat='true'></script>-->
+        <script src='//eu.fw-cdn.com/12381002/469037.js' chat='true'></script>
 </head>
 <body>
 
