--- a/index.html
+++ b/index.html
@@ -34,15 +34,13 @@
                     "type": "phone"
                 },
                 "4": {
-                    "error": "Please select an option",
+                    "error": "What brings you here?",
                     "fieldId": "plan",
                     "label": "Plan",
                     "options": [
-                        "Sprout",
-                        "Blossom",
-                        "Garden",
-                        "Estate",
-                        "Forest"
+                        "Ask a Question",
+                        "Report an Issue",
+                        "Enquire Status"
                     ],
                     "required": "no",
                     "type": "dropdown"
