--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     "type": "phone"
                 },
                 "4": {
-                    "error": "What brings you here?",
-                    "fieldId": "plan",
-                    "label": "Plan",
+                    "error": "Please select one from dropdown?",
+                    "fieldId": "whatbringsyouhere",
+                    "label": "What brings you here?",
                     "options": [
                         "Ask a Question",
                         "Report an Issue",
