--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
             "SubmitLabel": "Start Chat",
             "fields": {
                 "0": {
-                    "error": "Please Enter a valid Title",
-                    "fieldId": "title",
-                    "label": "Title",
+                    "error": "Please Enter a Sample text",
+                    "fieldId": "cf_sample",
+                    "label": "Sample",
                     "required": "yes",
                     "type": "text"
                 },
